# yagdal

./: .all-contributorsrc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  AUTHORS.rst  LICENSE  MANIFEST.in  Makefile  README.rst  pytest.ini  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  installation_issues.md
.github/workflows/: build_docs.yaml  tests.yaml
docs/: Makefile  conf.py  history.rst  make.bat
latest/: .buildinfo  genindex.html  history.html  index.html  installation.html  objects.inv  search.html  searchindex.js
latest/.doctrees/: environment.pickle  history.doctree  index.doctree  installation.doctree
latest/_sources/: index.rst.txt  installation.rst.txt
test/: test__version.py  test_cli.py  test_show_versions.py
yagdal/: __init__.py  __main__.py  _compat.pxd  _compat.pyx  _show_versions.py  _version.pxd  _version.pyi  _version.pyx
