[metadata]
name = yagdal
description = Yet another Python interface to GDAL (translator library for raster and vector geospatial data formats)
long_description = file: README.rst
author = yagdal contributors
author_email = alansnow21@gmail.com
license = BSD license
license_file = LICENSE
platform = any
keywords = GIS, map, geospatial, coordinate-systems, coordinate-transformation, raster, vector
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed
url = https://github.com/yagdal/yagdal
download_url = http://python.org/pypi/yagdal
project_urls =
    Documentation = https://yagdal.github.io/yagdal/
    Release Notes = https://yagdal.github.io/yagdal/stable/history.html
    Bug Tracker = https://github.com/yagdal/yagdal/issues
    Source Code = https://github.com/yagdal/yagdal

[options]
zip_safe = False # https://mypy.readthedocs.io/en/stable/installed_packages.html
packages = yagdal
python_requires = >=3.8
install_requires =
    certifi

[flake8]
max-line-length = 88
ignore =
    C408 # Unnecessary dict/list/tuple call - rewrite as a literal
    E203 # whitespace before ':' - doesn't work well with black
    E225 # missing whitespace around operator - let black worry about that
    W503 # line break occurred before a binary operator - let black worry about that
